--- a/payment-project-ang-py/payment-ag/package.json
+++ b/payment-project-ang-py/payment-ag/package.json
@@ -16,11 +16,15 @@
     "@angular/compiler": "^19.0.0",
     "@angular/core": "^19.0.0",
     "@angular/forms": "^19.0.0",
+    "@angular/material": "^19.0.2",
     "@angular/platform-browser": "^19.0.0",
     "@angular/platform-browser-dynamic": "^19.0.0",
     "@angular/platform-server": "^19.0.0",
     "@angular/router": "^19.0.0",
     "@angular/ssr": "^19.0.4",
+    "ag-grid-angular": "^32.3.3",
+    "ag-grid-community": "^32.3.3",
+    "ag-grid-enterprise": "^32.3.3",
     "express": "^4.18.2",
     "force": "^0.0.3",
     "rxjs": "~7.8.0",
@@ -39,7 +43,6 @@
     "karma-chrome-launcher": "~3.2.0",
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
-    "karma-jasmine-html-reporter": "~2.1.0",
-    "typescript": "~5.6.2"
+    "karma-jasmine-html-reporter": "~2.1.0"
   }
 }
